# custom_lib

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  custom_lib.cpp  macros.hpp  readme.md  singleton.hpp
backend/: CMakeLists.txt
backend/input/: CMakeLists.txt  backend_input_base.hpp
backend/input_handler/: CMakeLists.txt
backend/render/: CMakeLists.txt  backend_render_base.hpp  renderer.cpp
backend/simd/: simd_wrapper.cpp  simd_wrapper.hpp
backend/window/: CMakeLists.txt  backend_window_base.hpp
backend/window_creation/: CMakeLists.txt
cmake/: CPM.cmake  CompileFlags.cmake  Options.cmake  Platform.cmake  RegisterComponents.cmake  build_options.cmake  defines.cmake  functions.cmake  main.cmake
cmake.old/: Main.cmake  RegisterComponents.cmake
cmake.old/components/: Module.cmake
cmake/build_options/: gcc_base.cmake  gcc_debug.cmake  gcc_release.cmake
cmake/components/: Module.cmake  (+3 more)
common/: CMakeLists.txt  config_manager.cpp  math.cpp  timer.cpp
common/config/: config.cpp  config.hpp
common/cryptography/: CMakeLists.txt  fn1v.hpp
common/include/common/: async_caller.hpp  config_manager.hpp  logger.hpp  math.hpp  signal_handler.hpp  timer.hpp
common/include/common/hash/: crc32.hpp  fnv1a.hpp  md5.hpp
common/include/common/stores/: circular_buffer.hpp
common/include/common/threading/: async_caller.hpp  thread_pool.hpp  tripple_buffer.hpp
common/include/common/types/: bitflag.hpp  color.hpp
common/include/common/types/hash/: fnv1a.hpp  hash.hpp
common/include/common/types/point/: point2D.hpp  point3D.hpp  point4D.hpp
common/include/common/types/vector/: vector2D.hpp  vector3D.hpp
common/keybind/: keybind.cpp  keybind.hpp
common/math/: CMakeLists.txt  math_lib.cpp  math_lib.hpp
common/math/ray_intersection/: ray_intersect.cpp  ray_intersect.hpp
common/math/simd_math/: math_lib_simd.cpp  math_lib_simd.hpp
common/math_lib/: math_common.cpp
common/threading/: CMakeLists.txt  async_caller.cpp  thread_pool.cpp  thread_pool.hpp  triple_buffer.hpp
common/types/: CMakeLists.txt  bitflag.hpp  color.cpp  color.hpp
common/types/matrix/: matrix3x4.cpp  matrix4x4.cpp  matrix4x4.hpp  matrix_3x4.hpp
common/types/point/: point_float.cpp  point_float.hpp  point_int.cpp  point_int.hpp
common/types/vector/: vector2.hpp  vector2d.cpp  vector3.hpp  vector3d.cpp  vector_2d.hpp  vector_3d.hpp
components/: CMakeLists.txt
components/dep_nvrhi/: CMakeLists.txt
components/dep_nvrhi/include/dep_nvrhi/: nvrhi.hpp
components/dep_nvrhi/source/: dep_nvrhi.cpp
components/dep_nvrhi/test/: nvrhi_test.cpp
components/lib_gui/: CMakeLists.txt  lib_gui.cpp
components/lib_gui/include/lib_gui/: lib_gui.hpp  utils.hpp
components/lib_gui/include/lib_gui/defines/: global_defines.hpp
components/lib_gui/include/lib_gui/interface/: ui_base_element.hpp  ui_base_window.hpp  ui_drag_bar.hpp  ui_form.hpp
components/lib_gui/interface/: ui_base_element.cpp  ui_base_window.cpp  ui_drag_bar.cpp  ui_form.cpp
components/lib_gui/ui/console/: CMakeLists.txt  console_ui.cpp
components/lib_gui/ui/console/include/lib_gui/: console_ui.hpp
components/lib_gui/ui/settings/: CMakeLists.txt  settings_ui.cpp
components/lib_gui/ui/settings/include/lib_gui/: settings_ui.hpp
components/lib_gui/ui/text_ui/: CMakeLists.txt  text_ui.cpp
components/lib_gui/ui/text_ui/include/lib_gui/: text_ui.hpp
components/lib_input/: CMakeLists.txt  input_processor.cpp  input_receiver.cpp  lib_input.cpp
components/lib_input/api/glfw/: CMakeLists.txt  input_api.cpp
components/lib_input/api/glfw/include/lib_input/: input_api.hpp
components/lib_input/include/lib_input/: input_api_base.hpp  input_callback_handler.hpp  input_processor.hpp  input_receiver.hpp  lib_input.hpp
components/lib_rendering/: CMakeLists.txt  lib_rendering.cpp
components/lib_rendering/api/opengl3/: CMakeLists.txt  render_api.cpp  render_state.cpp  shaders.cpp
components/lib_rendering/api/opengl3/include/lib_rendering/: render_api.hpp  render_state.hpp  shaders.hpp
components/lib_rendering/api/opengl3/shaders/: basic_shader.vert  normal_shader.frag  outline_shader.frag  sdf_shader.frag
components/lib_rendering/api/vulkan/: CMakeLists.txt  render_api.cpp
components/lib_rendering/api/vulkan/include/lib_rendering/: render_api.hpp
components/lib_rendering/api/vulkan/include/lib_rendering/shaders/: .gitignore  basic_shader_frag.hpp  basic_shader_frag.spv  basic_shader_vert.hpp  basic_shader_vert.spv  normal_shader_frag.hpp  normal_shader_frag.spv  outline_shader_frag.hpp  outline_shader_frag.spv  sdf_shader_frag.hpp  sdf_shader_frag.spv
components/lib_rendering/api/vulkan/shaders/: basic_shader.frag  basic_shader.vert  normal_shader.frag  outline_shader.frag  sdf_shader.frag
components/lib_rendering/common/: atlas_generator.cpp  font_loader.cpp  image_loader.cpp  render_command.cpp
components/lib_rendering/include/lib_rendering/: lib_rendering.hpp  render_api_base.hpp  render_callback_handler.hpp
components/lib_rendering/include/lib_rendering/common/: atlas_generator.hpp  font_loader.hpp  image_loader.hpp  render_command.hpp  types.hpp
components/lib_window_creation/: CMakeLists.txt  helpers.cpp  lib_window_creation.cpp
components/lib_window_creation/api/glfw/: CMakeLists.txt  window_api.cpp  window_creation_impl.cpp
components/lib_window_creation/api/glfw/include/lib_window_creation/: window_api.hpp  window_creation_impl.hpp
components/lib_window_creation/include/lib_window_creation/: helpers.hpp  lib_window_creation.hpp  window_api_base.hpp  window_creation_base.hpp
core_sdk/: CMakeLists.txt  core_sdk.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt  glad.c  glad.cpp
dependencies/glad/include/glad/: glad.h  glad.hpp
frontend/: CMakeLists.txt
lib/: CMakeLists.txt
misc/: CMakeLists.txt
python/: compile_vulkan_shader.py  compile_vulkan_shaders.py
scripts/: clang_format.bat  clang_format.sh
unit_test/: CMakeLists.txt  cryptography_tests.cpp  math_tests.cpp  serialization_tests.cpp  threading_tests.cpp
(+375 files in other folders)
